# chatbot-payroll

./: .env.example  .gitignore  README.md  pyproject.toml
app/: chatbot.py  data_to_db.py  main.py  utils.py
data/: payroll.db
frontend/: app.py
tests/: test_chatbot.py  test_utils.py
