[project]
name = "chatbot-payroll"
version = "0.1.0"
description = ""
authors = [
    {name = "wanessa",email = "wanessaldantas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13, <4.0"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "ollama (>=0.6.0,<0.7.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
